--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
     "cron": "^1.8.2",
     "date-fns": "^2.25.0",
     "dotenv": "^10.0.0",
+    "global": "^4.4.0",
     "lodash": "^4.17.21",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.6.0",
+    "pm2": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
