--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs-query/core": "^0.30.0",
     "@nestjs-query/query-typeorm": "^0.30.0",
     "@nestjs/common": "^7.6.15",
@@ -49,7 +50,9 @@
     "date-fns": "^2.25.0",
     "dotenv": "^10.0.0",
     "global": "^4.4.0",
+    "handlebars": "^4.7.7",
     "lodash": "^4.17.21",
+    "nodemailer": "^6.9.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -74,6 +77,7 @@
     "@types/inline-css": "^3.0.1",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
+    "@types/nodemailer": "^6.4.7",
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
